# CNPJ-RFB

./: .gitignore  Downloads.ipynb  Untitled.ipynb  Untitled1.ipynb  auxiliar.xlsx  config.py  pyproject.toml  testes barra.ipynb  testes.ipynb
