[tool.poetry]
name = "cnpj-rfb"
version = "0.1.0"
description = ""
authors = ["vilquer <vilquer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.4"
pandas = "^1.4.2"
jupyter = "^1.0.0"
jupyterlab = "^3.4.2"
jupyterlab-git = "^0.37.1"
networkx = "^2.8.2"
enlighten = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
